Fixed coloring and spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,11 @@ body {
 .post-details {
   background-color: #282c37;
 }
+.post-details a {
+  color: #2b90d9;
+}
 sup a {
-  color: #767270;
+  color: #2b90d9;
 }
 /* END COLORS */
 
@@ -334,7 +337,6 @@ body {
 /* blog */
 .blog {
   position: relative;
-  /*height: 1000px;*/
 }
 .post-title {
   margin-top: -5px;
@@ -373,105 +375,4 @@ body {
 }
 #caption .post-details {
   margin-bottom: 0px;
-}
-.comment .section-wrapper {
-  padding-bottom: 0px !important;
-  margin-bottom: 0px !important;
-}
-.comment .comment-img {
-  padding: 10px;
-}
-.comment .comment-details {
-  padding: 10px;
-}
-.comment .comment-details h4 {
-  margin: 0px;
-}
-.comment .comment-details span {
-  font-size: 9pt;
-  line-height: 17pt;
-}
-.comment-form {
-  padding-bottom: 0px;
-  background-color: #fff;
-  padding: 20px 50px !important;
-}
-
-/* Contact */
-.section .g-map {
-  padding-bottom: 0px !important;
-}
-.section .g-map #map {
-  width: 100%;
-  height: 350px;
-}
-input[type=text]:focus:not([readonly]),
-input[type=password]:focus:not([readonly]),
-input[type=email]:focus:not([readonly]),
-input[type=url]:focus:not([readonly]),
-input[type=time]:focus:not([readonly]),
-input[type=date]:focus:not([readonly]),
-input[type=datetime-local]:focus:not([readonly]),
-input[type=tel]:focus:not([readonly]),
-input[type=number]:focus:not([readonly]),
-input[type=search]:focus:not([readonly]),
-textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #5da4d9;
-}
-input[type=text]:focus:not([readonly]) + label,
-input[type=password]:focus:not([readonly]) + label,
-input[type=email]:focus:not([readonly]) + label,
-input[type=url]:focus:not([readonly]) + label,
-input[type=time]:focus:not([readonly]) + label,
-input[type=date]:focus:not([readonly]) + label,
-input[type=datetime-local]:focus:not([readonly]) + label,
-input[type=tel]:focus:not([readonly]) + label,
-input[type=number]:focus:not([readonly]) + label,
-input[type=search]:focus:not([readonly]) + label,
-textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #5da4d9;
-}
-.waves-me:focus {
-  background-color: #5da4d9;
-  color: #fff;
-}
-.btn {
-  margin-left: 10px;
-  background-color: #5da4d9;
-}
-.btn:hover,
-.btn:focus {
-  background-color: #5da4d9;
-}
-.email-success,
-.email-failed {
-  display: none;
-  text-align: left !important;
-  margin: 0 0 0 0 !important;
-}
-.btn.disabled {
-  background-color: #5da4d9;
-  color: #fff;
-  cursor: default;
-}
-.btn.disabled:focus {
-  background-color: #5da4d9;
-  color: #fff;
-  cursor: default;
-}
-.btn.disabled:hover {
-  background-color: #5da4d9;
-  color: #fff;
-  cursor: default;
-}
-#msgSubmit {
-  font-size: 20px;
-  margin-bottom: 20px;
-  margin-left: 10px;
-}
-.text-danger {
-  color: red;
-}
-.text-success {
-  color: #5da4d9 ;
 }
